JS-8910, JS-8911: fix gallery overlay arrow navigation and thumbnail clipping
Arrows in gallery overlay were closing the preview instead of navigating because
click events bubbled to the dimmer handler. Thumbnail strip was clipping the first
image when opened from a non-first slide due to Swiper translate3d offset with
overflow hidden.

--- a/src/scss/popup/preview.scss
+++ b/src/scss/popup/preview.scss
@@ -56,7 +56,7 @@ $gallerySlidesH: calc(100vh - $galleryHeaderH - $galleryFooterH);
 
 			.galleryFooter { position: relative; height: $galleryFooterH; flex-shrink: 0; display: flex; align-items: center; justify-content: center; }
 			.galleryFooter {
-				.swiper { z-index: 2; }
+				.swiper { z-index: 2; overflow: visible; }
 				.swiper-slide { width: unset; display: flex; align-items: center; }
 				.previewItem { width: 72px; height: 72px; border-radius: 4px; overflow: hidden; }
 				.mediaContainer { position: relative; width: 100%; height: 100%; display: flex; }
@@ -74,7 +74,7 @@ $gallerySlidesH: calc(100vh - $galleryHeaderH - $galleryFooterH);
 
 				.previewItem.isVideo {
 					.mediaContainer {
-						video { position: absolute; width: 150px; height: 150px; left: 50%; top: 50%; margin: -75px 0px 0px -75px; }
+						video { position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; margin: 0px; object-fit: cover; }
 					}
 					.mediaContainer::before { content: ''; position: absolute; z-index: 2; width: 100%; height: 100%; background: #252525; opacity: 0.2; }
 					.mediaContainer::after {
